--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,4 +6,5 @@ readme = "../README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.115.12",
+    "psycopg2>=2.9.10",
 ]
