--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,3 +9,11 @@ dependencies = [
     "psycopg2>=2.9.10",
     "tenacity>=9.1.2",
 ]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.11.11",
+]
+
+[tool.ruff]
+line-length = 120
